fix: Text wrap in nextsteps button.

--- a/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
+++ b/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
@@ -47,6 +47,7 @@
     font-size: calc(11 * var(--px-in-rem));
     line-height: calc(14 * var(--px-in-rem));
     color: var(--ntp-color-primary);
+    text-wrap: wrap; /* needed for some languages */
 
     &.supressActiveStateForSwitch {
         opacity: 1;
@@ -84,7 +85,7 @@
 
     @media screen and (prefers-color-scheme: dark) {
         &.supressActiveStateForSwitch {
-            /* outline: 1px solid yellow; */
+
             &:active {
                 background-color: var(--color-black-at-9);
             }
